# pairhmm_posit_hdl_stream

./: .gitignore  .gitmodules  README.md  vivado.jou
pairhmm/: Makefile  fsm_encoding.os  generate_ips.tcl  psl_fpga.tcl
pairhmm/Sources/host/: .cproject  .project
pairhmm/Sources/host/app_posit/: CMakeLists.txt  run_benchmark.sh
pairhmm/Sources/host/app_posit/src/: batch.cpp  batch.hpp  config.hpp  debug_values.hpp  defines.h  defines.hpp  pairhmm.cpp  pairhmm_float.hpp  pairhmm_posit.hpp  psl.hpp  utils.cpp  utils.h  utils.hpp
pairhmm/Sources/host/app_posit/src/java/: .gitignore  PairHMM.java
pairhmm/Sources/host/app_posit/src/python/: testerr.py
pairhmm/Sources/prj/: psl_fpga.prj
pairhmm/Sources/sim/: gmon.out  transcript  vsim.tcl  vsim.wlf  vsim_stacktrace.vstf  wave.do
pairhmm/Sources/top/: psl_accel.vhdl  psl_fpga.vhdl
pairhmm/Synth/psl_fpga/: psl_fpga_synth_design.rds  psl_fpga_utilization_synth.rpt
pairhmm/Tcl/: synth_utils.tcl
pairhmm/afu/lib/: psl.vhd  wed.vhd
pairhmm/afu/pkg/: control_package.vhd  cu_package.vhd  dma_package.vhd  pairhmm_package.vhd  pairhmm_package.vhd.bak
pairhmm/afu/rtl/: asym_ram.v  control.vhd  cu.vhd  fifo.vhd  pairhmm.vhd  pe.vhd  ram.vhd
pairhmm/host/: batch.c  defines.h  pairhmm.c
pairhmm/host/example/: example.py
pairhmm/prj/: psl_fpga.prj
pairhmm/testdata/: 32_data.txt
pairhmm/xdc/: b_xilinx_capi_pcie_gen3_alphadata_brd.xdc  pairhmm.xdc
posit_add/: posit_add.xpr
posit_add/posit_add.cache/wt/: gui_resources.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
posit_add/posit_add.runs/.jobs/: vrs_config_1.xml  vrs_config_3.xml
posit_add/posit_add.runs/impl_1/: .route_design.begin.rst  .vivado.begin.rst  gen_run.xml  htr.txt  init_design.pb  (+27 more)
posit_add/sim/: Pin1_8bit.txt  error_8bit.txt  posit_add  sim.sh
posit_add/src/: error_8bit.txt  posit_adder.v  posit_adder_8bit_tb.v
(+276 files in other folders)
